Padding around continue button is uneven--changed padding to fix this

--- a/testing.css
+++ b/testing.css
@@ -54,7 +54,7 @@ a{
 	width: 90px;
 	margin-top: 80px;
 	font-weight: bold;
-	padding: 36px;
+	padding: 50px;
 	color: #fca9d9;
 	border: 4px solid #fff;
 	text-align: center;
